[package]
name = "resend-ticketd"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Minimal Resend inbound email ticket service"

[dependencies]
anyhow = "1.0"
argon2 = { version = "0.5", features = ["std"] }
axum = { version = "0.7", features = ["http1", "macros", "tokio"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
base64 = "0.22"
bytes = "1.7"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
hmac = "0.12"
html-escape = "0.2"
rand = "0.8"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
subtle = "2.6"
tokio = { version = "1.48", features = ["macros", "net", "process", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.11", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.14"
tower = "0.5"
