[package]
name = "vps-trafficd"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Authenticated VPS traffic usage JSON service"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["tokio", "http1"] }
axum-server = { version = "0.8.0", features = ["tls-rustls-no-provider"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "net"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3.14"
tower = "0.5"
